mktitleimg in badge/tools eingeordnet.

--- a/badge/tools/Makefile
+++ b/badge/tools/Makefile
@@ -2,14 +2,23 @@
 
 CXX      = g++
 CXXFLAGS = -Wall -Wextra -std=c++11 -O0 -g
+CPPFLAGS = -I .. -I ../..
 
-TARGET   = level-converter
-SRCS     = level-converter.cc
-OBJS     = $(SRCS:%.cc=%.o)
-DEPS     = $(OBJS:%.o=%.dep)
-CPPFLAGS = -I ..
+LC_TARGET   = level-converter
+LC_SRCS     = level-converter.cc
+LC_OBJS     = $(LC_SRCS:%.cc=%.o)
+LC_DEPS     = $(LC_OBJS:%.o=%.dep)
 
-all: $(TARGET)
+MKTI_TARGET = mktitleimg
+MKTI_SRCS   = mktitleimg.cc
+MKTI_OBJS   = $(MKTI_SRCS:%.cc=%.o)
+MKTI_DEPS   = $(MKTI_OBJS:%.o=%.dep)
+MKTI_LIBS   = -lsfml-graphics
+
+DEPS = $(LC_DEPS) $(MKTI_DEPS)
+OBJS = $(LC_OBJS) $(MKTI_OBJS)
+
+all: $(LC_TARGET) $(MKTI_TARGET)
 
 $(DEPS) : %.dep : %.cc
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -MM $< -MT $@ -MT $(@:%.dep=%.o) -MF $@
@@ -19,11 +28,14 @@ sinclude $(DEPS)
 $(OBJS): %.o : %.cc
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -o $@ -c $<
 
-$(TARGET): $(OBJS)
+$(LC_TARGET): $(LC_OBJS)
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o $@ $+ $(LDLIBS)
 
+$(MKTI_TARGET): $(MKTI_OBJS)
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o $@ $+ $(MKTI_LIBS) $(LDLIBS)
+
 clean:
-	rm -f $(TARGET) $(OBJS)
+	rm -f $(LC_TARGET) $(MKTI_TARGET) $(OBJS)
 
 distclean: clean
 	rm -f $(DEPS)
