--- a/mock-sdl/Makefile
+++ b/mock-sdl/Makefile
@@ -2,7 +2,7 @@
 
 CC            = emcc
 CPPFLAGS      = -I. -I ../badge
-CFLAGS        = -Wall -Wextra -pedantic -std=c99 -Werror -O0 -g
+CFLAGS        = -Wall -Wextra -pedantic -std=c99 -Werror -Os
 LDLIBS        = -SDL -SDLmain
 
 BADGE         = badge.html
